--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -4,9 +4,12 @@
   flex-direction: column;
   align-items: center;
   padding: 40px 12px 20px;
-  border-radius: 10px;
+  border-style: solid;
+  border-width: 1px;;
+  border-radius: 4px;
+  border-color: #22a1cb;
   // width: 800px;
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+  // box-shadow: 0 0 1px #22a1cb;
   gap: 1.5rem;
 
 }
@@ -106,7 +109,7 @@
 .btn-add {
   a {text-decoration: none;
     color: #22a1cb;
-    
+
   }
 
 }
